<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelecaoTamanhoPagamento">

    <Button
        android:id="@+id/btnContinuar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#9d63cd"
        android:text="@string/appT1btnContinuar"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/txtTamanho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TituloEscolha"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/txtPagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TituloPagamento"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <ImageView
        android:id="@+id/imgLogo2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/tamanho" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <RadioButton
            android:id="@+id/rbTamanho1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tamanho1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbTamanho2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tamanho2"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbTamanho3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tamanho3"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RadioGroup>

    <RadioGroup
        android:layout_width="408dp"
        android:layout_height="109dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <RadioButton
            android:id="@+id/rbPagamento1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pagamento1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbPagamento2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pagamento2"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
